# Framework

./: CMakeLists.txt  README.md  clang.sh  sonar-project.properties
.github/workflows/: build-backend.yml  build-container.yml  build-framework-container.yml  build-framework.yml
backend/: .env.ci  composer.json
backend/bootstrap/: app.php
backend/config/: database.php
backend/database/seeders/: DatabaseSeeder.php
cmake/: frameworkConfig.cmake.in
docker/: Dockerfile  shared.dockerfile  static.dockerfile
scripts/: build-and-test.sh  build.sh  check-format.sh
src/include/framework/: auth.hpp  chrono.hpp  cipher.hpp  controller.hpp  controller_config.hpp  encoding.hpp  http_kernel.hpp  http_listener.hpp  http_session.hpp  job.hpp  jwt.hpp  kernel.hpp  listener.hpp  metrics.hpp  queue.hpp  route.hpp  router.hpp  server.hpp  session.hpp  signal_handler.hpp  state.hpp  string_hasher.hpp  support.hpp  task.hpp  task_group.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_endpoint.hpp  tcp_endpoint_connection.hpp  tcp_endpoint_handlers.hpp  tcp_endpoint_session.hpp  tcp_handlers.hpp  tcp_kind.hpp  tcp_listener.hpp  tcp_service.hpp  tcp_service_connection.hpp  tcp_service_handlers.hpp  tcp_service_session.hpp  tcp_session.hpp  validator.hpp  (+2 more)
src/include/framework/controllers/: metrics_controller.hpp  user_controller.hpp
src/include/framework/controllers/auth/: attempt_controller.hpp
src/include/framework/controllers/queues/: dispatch_controller.hpp  index_controller.hpp  jobs_controller.hpp  tasks_controller.hpp  workers_controller.hpp
src/include/framework/errors/: cancel_error.hpp  cipher_error.hpp  not_found_error.hpp  parse_error.hpp  session_error.hpp  signature_error.hpp  task_not_found.hpp
src/include/framework/errors/tcp/: connection_cancelled.hpp  frame_too_large.hpp  host_not_resolved.hpp  on_read_error.hpp  service_not_found.hpp
src/objects/framework/: auth.cpp  chrono.cpp  cipher.cpp  controller.cpp  http_kernel.cpp  http_listener.cpp  http_session.cpp  job.cpp  jwt.cpp  kernel.cpp  listener.cpp  queue.cpp  route.cpp  router.cpp  server.cpp  session.cpp  state.cpp  task.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_endpoint.cpp  tcp_endpoint_connection.cpp  tcp_endpoint_handlers.cpp  tcp_endpoint_session.cpp  tcp_handlers.cpp  tcp_listener.cpp  tcp_service.cpp  tcp_service_connection.cpp  tcp_service_handlers.cpp  tcp_service_session.cpp  tcp_session.cpp  validator.cpp  version.cpp  worker.cpp
src/objects/framework/controllers/: status_controller.cpp  user_controller.cpp
src/objects/framework/controllers/auth/: attempt_controller.cpp
src/objects/framework/controllers/queues/: dispatch_controller.cpp  index_controller.cpp  jobs_controller.cpp  tasks_controller.cpp  workers_controller.cpp
tests/: test_cipher.cc  test_encoding_base64.cc  test_encoding_base64url.cc  test_job.cc  test_jwt.cc  test_queue.cc  test_route.cc  test_router.cc  test_server.cc  test_state.cc  test_validator.cc  test_version.cc  test_worker.cc
